project(dwiAtlas)

set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME ON)
find_package(Boost REQUIRED)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
else()
  mark_as_advanced( CLEAR Boost_DIR Boost_INCLUDE_DIR )
endif()

link_directories(${BOOST_LIBRARY_DIR} ${DTIIO_LIBRARY_DIR})

include_directories(${BOOST_INCLUDE_DIR} ${DWIProcess_SOURCE_DIR}/Library ${DWIProcess_SOURCE_DIR}/PrivateLibrary)

if( NOT ITKV3_COMPATIBILITY )
  message( FATAL_ERROR "dwiAtlas requires ITK to be built with ITKV3_COMPATIBILITY set to ON" )
endif()

SEMMacroBuildCLI(
    NAME dwiAtlas
    ${STATIC}
    TARGET_LIBRARIES ${ITK_LIBRARIES} DTIIO ${BOOST_LIBRARIES}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
    INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
    )
